--- a/style/css.css
+++ b/style/css.css
@@ -972,7 +972,7 @@
 
 .event-card .event-image {
     width: 100%;
-    height: 200px;
+    height: 100%;
     object-fit: cover;
     object-position: center; /* Alinha a imagem pela base */
     transition: transform 0.4s ease;
