--- a/style/css.css
+++ b/style/css.css
@@ -249,6 +249,17 @@
             background: white;
         }
 
+        .development-tag {
+            background-color: #a6a6a6; 
+            color: #fff; 
+            padding: 5px 10px; 
+            font-size: 0.8em; 
+            font-weight: bold; 
+            border-radius: 15px; 
+            display: inline-block;
+            margin-top: 5px; 
+            margin-bottom: 10px; 
+        }
 
 
 
@@ -736,7 +747,7 @@
         }
 
         .footer-socials svg {
-            fill: black;
+            fill: rgb(255, 255, 255);
         }
  
         .footer-links a {
@@ -752,7 +763,7 @@
  
         .footer-copyright {
             font-size: 14px;
-            color: #000000;
+            color: #ffffff;
         } 
 
         .footer-contact {
